--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "testdb": "node test_connection.js",
     "pm2": "pm2 start index.js"
   },
   "author": "Nikita Bychkov",
