--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node --no-warnings index.js",
+    "start-once": "node --no-warnings run_once.js",
     "testdb": "node --no-warnings test_connection.js",
     "pm2": "pm2 start index.js"
   },
